Fix truncate and new frontpage

--- a/glia/static/less/main.less
+++ b/glia/static/less/main.less
@@ -372,56 +372,6 @@ only screen and (min-resolution: 2dppx) {
     margin-bottom: 7em;
 }
 
-.rk-frontpage {
-
-    .rk-frontpage-ident {
-        background-color: #fcfcfc;
-        margin-top: .5em;
-
-        .panel-heading {
-            font-variant: small-caps;
-            padding: 10px 0 7px;
-            border-bottom: none;
-
-            p {
-                font-size: 14px;
-                color: white;
-                margin: 0 15px;
-                font-variant: normal;
-                font-style: italic;
-            }
-
-            a {
-                color: white;
-            }
-
-            a:hover, a:focus {
-                text-decoration: none;
-            }
-        }
-
-        .panel-body {
-
-            h2 {
-                font-size: 26px;
-            }
-
-            .rk-thought-title h3 {
-                font-size: 14px;
-            }
-
-            .rk-thought-line {
-                margin-bottom: 5px;
-            }
-        }
-    }
-
-    .panel .panel {
-        // Reset margin for text panels inside movement panels
-        margin: 0
-    }
-}
-
 .rk-toc {
     padding-bottom: 1em;
     border: none;
@@ -599,7 +549,7 @@ only screen and (min-resolution: 2dppx) {
     border-bottom: 1px solid #eee;
 
     .truncate {
-        height: 200px;
+        max-height: 200px;
         overflow-y: hidden;
         margin-bottom: 10px;
 
@@ -609,13 +559,18 @@ only screen and (min-resolution: 2dppx) {
             width: 100%;
             margin-left: -10px;
             cursor: pointer;
+            opacity: 0.5;
+        }
+
+        .truncate-toggle:hover {
+            opacity: 1.0;
         }
 
         .fa-arrow-circle-up { display: none; }
         .fa-arrow-circle-down { display: inline-block; }
 
         &.truncate-disable {
-            height: 100%;
+            max-height: 100%;
 
             .fa-arrow-circle-up {
                 display: inline-block;
